[package]
name = "registry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
hyper = { version = "0.14.13", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
hyper-tls = "0.5.0"
serde_json = "1.0.68"